Changelog
=========

2.7 (unreleased)
----------------

- Add a protected FOOT section in type.xml.
  [vincentfretin]

- Add vocabulary_factory tagged value.
  [thomasdesvenain]

- Avoid deprecated import warning under Zope 2.13+.
  [thomasdesvenain]

- Fixed inconstancy between template name and portlet class by removing .pt in the generation
  [jihaisse]

- Added method generation for portlet class.
  The portlet class will look like the classic portlet.
  [jihaisse]


2.6 (2011-03-10)
----------------

- make z3 interfaces the default interface and dont accept any longer zope2 
  interfaces
  [jensens]

- Use portal_type tagged-value if available instead of class name when
  generating workflows.xml.
  [vincentfretin]

- remove unneccessary imports for remember/membrane, 
  view permissions can now additionally be specified in the dependency 
  association to the content class,
  name of the view template can now additionally be specified in the
  dependency relation between view class and content class,
  pass fixed size parameter to arrayfield (i.e. 4 generates size-4) ,
  browser views: name on dpendency determines name of view,
  remove old generator i18n support.
  [zworkb]

- tgv for dynatree widget
  [hpeteragitator]

- Added worklist:guard_expressions tag definition.
  [vincentfretin]

- Fixed UnicodeEncodeError when writing the code of existing methods
  back to the files and the code is in the unicode format.
  [deo]


2.5 (2010-09-04)
----------------

- Extender doesn't generate interfaces twice anymore.
  [jensens]

- You can now set meta_type="Subtractive Workflow" (default is "Workflow")
  and state_var="confidential_state" for example (default is "review_state")
  on a workflow to use it with collective.subtractiveworkflow.
  [vincentfretin]

- Added roles and permissions protected sections in rolemap.xml.
  [vincentfretin]

- Replaced buggy odict implementation by the ordereddict implementation
  available in Python 2.7.
  [moldy]
