@@ -4,6 +4,10 @@ Changelog
 2.7 (unreleased)
 ----------------
 
+- If plone_target_version tagged-value is set to 4.0 or 4.1, then generate
+  icon_expr instead of content_icon for FTIs.
+  [vincentfretin]
+
 - Add a protected FOOT section in type.xml.
   [vincentfretin]
 
